--- a/buoi2/style.css
+++ b/buoi2/style.css
@@ -1,27 +1,45 @@
-h1 {
-    color: red;
-    font-size: 4em;
-    font-style: italic;
-    font-weight: 400;
-    text-align: center;
-    text-decoration: underline;
-    border-style: dashed;
-    border-color: blue;
-    border-radius: 70px;
-    border-width: 5px;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: gainsboro;
+
+nav {
+    border-style: solid;
+    border-color: black;
+    border-left: none;
+    border-right: none;
+}
+ 
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0;
 }
 
-li, a {
+a {
     text-decoration: none;
+    list-style-type: none;
     color: black;
 }
 
-.navLink {
-    color: green;
-    
-    
+a:hover {
+    color: red;
 }
+
+li {
+    padding: 10px;
+    width: 33%;
+    text-align: center;
+}
+
+footer {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.postImage {
+    width: 300px;
+}
+
+.copyRight{
+    text-align: center;
+}
+
