--- a/buoi3/stylemass.css
+++ b/buoi3/stylemass.css
@@ -236,7 +236,7 @@ main {
 
 .products {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-around;
 }
 
@@ -245,6 +245,7 @@ main {
   flex-flow: column wrap;
   align-items: flex-end;
   width: 20%;
+  margin: 25px 2.5% 25px 2.5%;
   box-shadow: 0 0 10px rgba(0,0,0,1);
   background: linear-gradient( -45deg, rgba(64,121,153,1) 5%,rgba(42,62,89,1) 95%);
 }
@@ -254,6 +255,7 @@ main {
   flex-flow: row wrap;
   justify-content: space-around;
   width: 20%;
+  margin: 25px 2.5% 25px 2.5%;
   box-shadow: 0 0 10px rgba(0,0,0,1);
   background: linear-gradient( -45deg, rgba(64,121,153,1) 5%,rgba(42,62,89,1) 95%);
 }
