--- a/day4-1/style-kqxs.css
+++ b/day4-1/style-kqxs.css
@@ -254,7 +254,7 @@ figcaption {
 }
 
 footer {
-  margin-top: 30px;
+  margin-top: 20px;
   height: 120px
 }
 
@@ -302,12 +302,11 @@ footer {
 
 #out-link {
   width: 100%;
-  margin-top: 100px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #2e80ec;
-  );
   height: 100px;
 }
 
@@ -318,4 +317,6 @@ footer {
   justify-content: center;
   align-items: center;
   line-height: 30px;
+  width: 100%;
+  font-size: 30px;
 }
