--- a/day5/style-test.css
+++ b/day5/style-test.css
@@ -1,8 +1,7 @@
 /* ---------- reset css ----------*/
 * {
   box-sizing: border-box;
-  margin: 0;
-  
+  margin: 0; 
 }
 
 a {
@@ -25,19 +24,43 @@ table {
 
 /* ---------- kết thúc reset css ----------*/
 
-/* ---------- style chung header ----------*/
+/* ---------- style chung ----------*/
+
 header {
   width: 980px;
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-  background-color: rgb(212, 212, 212);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* ---------- hết style chung header ----------*/
 
-/* ---------- style upper-header ----------*/
-#upper-header {
+/* ----------  upper-nav ----------*/
+#upper-nav {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  padding-inline-start: 0px;
+  background: rgba(0,0,0,.03);
+  height: 25px;
+}
+#upper-nav a {
+  font-size: 12px;
+  color: #9e9e9e;
+  transition: color .2s;
+  font-family: Roboto-Regular,'Helvetica Neue',Helvetica,Tahoma,Arial,Sans-serif;
+}
+
+#upper-nav a:hover {
+  color: rgb(252, 76, 76);
+}
+
+/* ---------- style middle-header ----------*/
+#middle-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,7 +69,6 @@ header {
   padding-bottom: 25px;
   border-bottom: 1px solid rgb(197, 197, 197);
 }
-
   /* ---------- style: logo, search box, search icon, small banner ----------*/
 #logo-link {
   width: 150px;
@@ -85,77 +107,107 @@ input[type="text"]:focus {
 }
   /* ------ kết thúc style: logo, search box, search icon, small banner ------*/
 
-/* ---------- kết thúc style upper-header ----------*/
+/* ---------- kết thúc style middle-header ----------*/
 
 /* ---------- style nav ----------*/
 
-.menu {
+.main-menu {
   list-style: none;
   padding: 0;
   display: flex;
-  flex-flow: column;
+  flex-flow: column wrap;
   position: relative;
+  width: 200px;
 }
 
-.menu_item {
-  display: inline-block;
-  margin-right: 10px;
-  position: static;
+.main-menu, .sub-menu-lv1, .sub-menu-lv2 {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.menu_link {
+.menu-items, .sub-items {
   display: inline-block;
-  padding: 10px 0;
+  padding: 5px 0 5px 10px;
+}
+
+.menu-links {
+  display: inline-block;
+  padding: 0;
   text-decoration: none;
   color: black;
 }
 
-/* Style cho menu nhỏ */
-.sub_menu {
-  width: 80px;
+.sub-menu-lv1 {
   display: none;
+  width: 200px;
+  height: 272px;
   list-style: none;
-  padding: 10px 0 10px 10px;
+  padding-inline-start: 0px;
   position: absolute;
-  top: 100%;
   background-color: white;
   box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  top: 0px;
+  left: 100%;
 }
 
-.menu_item:hover .sub_menu {
+.sub-items {
+  padding-right: 5px;
+}
+
+.menu-items:hover .sub-menu-lv1 {
   display: block;
 }
 
-.sub_item:not(:last-child) {
-  margin-bottom: 10px;
+.sub-items:not(:last-child) {
+  margin-bottom: 0px;
 }
 
-.sub_link {
+.sub-links {
   text-decoration: none;
   color: black;
 }
 
 /* Style cho sub2 menu */
-.sub2_menu {
+.sub-menu-lv2 {
   display: none;
-  width: 80px;
+  width: 200px;
+  height: 272px;
   list-style: none;
-  padding: 10px 0 10px 10px;
   position: absolute;
   background-color: white;
   box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
   top: 0;
   left: 100%;
+  padding-inline-start: 0px;
 }
 
-.sub_item:hover > .sub2_menu {
+.sub-items:hover > .sub-menu-lv2 {
   display: block;
 }
 
-.banner-container *{
-  max-width: 100%;
+.sub-items, .sub-links, .menu-links {
+  display: block;
+  width: 100%;
+}
+
+.menu-items:hover, .sub-items:hover {
+  background-color: rgb(233, 233, 233);
+}
+
+.menu-items:hover > a, .sub-items:hover > a {
+  color:  rgb(252, 76, 76);;
 }
 
 .banner-container {
-  width: 750px;
+  width: 780px;
+  height: 273px;
+}
+
+.banner-container img {
+  width: 100%;
+  height: 100%;
+}
+
+nav {
+  border-bottom: 1px solid rgb(197, 197, 197);
 }
